--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="AWS User Group Bangladesh is to extend the professional network of Amazon Web Services (AWS) professionals in order to share and create knowledge and mutual benefit. This is the only Amazon approved AWS user group in Bangladesh. Also we'd like to help people out with their queries about cloud platform for their practical uses. We are mainly focusing on Amazon Web Services for now. With time, there might be other cloud platforms to discuss, explore and experience. But for now we are here with a view to help cloud service seekers to find a common platform much more convenient than the conventional manner."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>AWS User Group Bangladesh</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
